--- a/src/wazuh_modules/syscollector/tests/sysCollectorFlatbuffers/CMakeLists.txt
+++ b/src/wazuh_modules/syscollector/tests/sysCollectorFlatbuffers/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-project(syscollectordeltas_unit_test)
+project(syscollectorflatbuffers_unit_test)
 
 get_filename_component(SRC_FOLDER     ${CMAKE_SOURCE_DIR}/../../ ABSOLUTE)
 
@@ -20,7 +20,7 @@ add_definitions(-DWAZUH_UNIT_TESTING)
 add_executable(${PROJECT_NAME}
     ${SYSCOLLECTOR_FLATBUFFERS_UNIT_TEST_SRC}
 )
-target_compile_definitions(syscollectorfb_unit_test PUBLIC SCHEMA_ROOT_PATH="${SRC_FOLDER}/wazuh_modules/syscollector/schemas/")
+target_compile_definitions(${PROJECT_NAME} PUBLIC SCHEMA_ROOT_PATH="${SRC_FOLDER}/wazuh_modules/syscollector/schemas/")
 
 target_link_libraries(${PROJECT_NAME}
         debug gtestd
