Correction of KVDB CLI test and add API router test

--- a/src/engine/test/integration_tests/cli-communication/setup.cfg
+++ b/src/engine/test/integration_tests/cli-communication/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = engine-integration
+name = cli-communication
 version = 1.0.0.dev0
 author = "Wazuh Inc."
 description = "A tool that allows to establish a communication with the Engine"
