--- a/.github/workflows/engine_integration_test.yml
+++ b/.github/workflows/engine_integration_test.yml
@@ -1,4 +1,4 @@
-name: Engine KVDB Integration Test
+name: Engine Integration Test
 
 # Controls when the action will run.
 on:
@@ -25,7 +25,7 @@ env:
 
 jobs:
   build:
-    name: Engine KVDB Integration Test
+    name: Engine Integration Test
 
     # Runs only if the PR status is different to Draft
     if: ${{ !github.event.pull_request.draft }}
@@ -49,7 +49,9 @@ jobs:
     - name: Install dependencies
       # Install behave
       run: |
-        pip install ${{env.ENGINE_DIR}}/test/integration_tests/engine-integration-test/
+        pip install ${{env.ENGINE_DIR}}/test/integration_tests/api-communication/
+        pip install ${{env.ENGINE_DIR}}/test/integration_tests/cli-communication/
+        pip install ${{env.ENGINE_DIR}}/tools/engine-suite/
         pip install behave
 
     - name: Configure CMake
