Making router_message_forward() testeable: - Flatcc helpers created - Corresponding wrappers added - Unit tests added

--- a/src/unit_tests/remoted/CMakeLists.txt
+++ b/src/unit_tests/remoted/CMakeLists.txt
@@ -2,6 +2,8 @@
 file(GLOB remoted_files
     ${SRC_FOLDER}/remoted/*.o)
 
+add_compile_options("-g")
+
 add_library(REMOTED_O STATIC ${remoted_files})
 
 set_source_files_properties(
@@ -73,7 +75,9 @@ list(APPEND remoted_flags "-Wl,--wrap,_merror -Wl,--wrap,_mwarn -Wl,--wrap,accep
                             -Wl,--wrap,save_controlmsg -Wl,--wrap,sleep -Wl,--wrap,stat -Wl,--wrap,time \
                             -Wl,--wrap,w_mutex_lock -Wl,--wrap,w_mutex_unlock \
                             -Wl,--wrap,wnotify_add -Wl,--wrap,SendMSG -Wl,--wrap,rem_inc_recv_evt \
-                            -Wl,--wrap,OS_DupKeyEntry -Wl,--wrap,OS_FreeKey ${DEBUG_OP_WRAPPERS}")
+                            -Wl,--wrap,OS_DupKeyEntry -Wl,--wrap,OS_FreeKey ${DEBUG_OP_WRAPPERS} \
+                            -Wl,--wrap,router_provider_send -Wl,--wrap,router_provider_create \
+                            -Wl,--wrap,w_flatcc_parse_json -Wl,--wrap,w_flatcc_free_buffer")
 
 list(APPEND remoted_names "test_netbuffer")
 list(APPEND remoted_flags "-Wl,--wrap,_merror -Wl,--wrap,_mwarn -Wl,--wrap,_mdebug1 -Wl,--wrap,wnet_order -Wl,--wrap,wnotify_modify \
