--- a/ruleset/sca/ubuntu/cis_ubuntu18-04-LTS.yml
+++ b/ruleset/sca/ubuntu/cis_ubuntu18-04-LTS.yml
@@ -2,7 +2,7 @@
 # CIS Checks for Ubuntu Linux 18.04 LTS
 # Copyright (C) 2015, Wazuh Inc.
 #
-# This program is free software; you can redistribute it
+# This program is free software; you can redistribute It
 # and/or modify it under the terms of the GNU General Public
 # License (version 2) as published by the FSF - Free Software
 # Foundation
