Added validation to Policy API and removed namespaces from policy store document

--- a/src/engine/source/policy/CMakeLists.txt
+++ b/src/engine/source/policy/CMakeLists.txt
@@ -43,6 +43,7 @@ if(ENGINE_BUILD_TEST)
 
     add_executable(policy_utest
         ${UNIT_SRC_DIR}/policy_test.cpp
+        ${UNIT_SRC_DIR}/policyRep_test.cpp
     )
     target_link_libraries(policy_utest gtest_main policy::mocks policy)
     gtest_discover_tests(policy_utest)
