--- a/ruleset/sca/amazon/cis_amazon_linux_2.yml
+++ b/ruleset/sca/amazon/cis_amazon_linux_2.yml
@@ -45,8 +45,10 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - "c:modprobe -n -v cramfs -> r:^install /bin/true"
+      - "not c:lsmod -> r:cramfs"
 
   # 1.1.1.2 Ensure mounting of squashfs filesystems is disabled. (Automated)
   - id: 18657
@@ -65,8 +67,10 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - "c:modprobe -n -v squashfs -> r:^install /bin/true"
+      - "not c:lsmod -> r:squashfs"
 
   # 1.1.1.3 Ensure mounting of udf filesystems is disabled. (Automated)
   - id: 18658
@@ -84,8 +88,10 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - "c:modprobe -n -v udf -> r:^install /bin/true"
+      - "not c:lsmod -> r:udf"
 
   # 1.1.2 Ensure /tmp is configured. (Automated)
   - id: 18659
@@ -107,8 +113,11 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: any
     rules:
+      - 'c:findmnt -n /tmp -> r:\s/tmp\s'
+      - 'f:/etc/fstab -> !r:^# && r:\s/tmp\s'
+      - 'c: systemctl show "tmp.mount" -> r:UnitFileState\s*=\s*enabled'
 
   # 1.1.3 Ensure noexec option set on /tmp partition. (Automated)
   - id: 18660
@@ -126,14 +135,15 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt -n /tmp -> r:\s/tmp\s && r:noexec'
 
   # 1.1.4 Ensure nodev option set on /tmp partition. (Automated)
   - id: 18661
     title: "Ensure nodev option set on /tmp partition."
     description: "The nodev mount option specifies that the filesystem cannot contain special devices."
-    rationale: "Since the /tmp filesystem is not intended to support devices, set this option to ensure that users cannot attempt to create block or character special devices in /tmp ."
+    rationale: "Since the /tmp filesystem is not intended to support devices, set this option to ensure that users cannot attempt to create block or character special devices in /tmp."
     remediation: "Edit the /etc/fstab file OR the /etc/systemd/system/local- fs.target.wants/tmp.mount file: IF /etc/fstab is used to mount /tmp Edit the /etc/fstab file and add nodev to the fourth field (mounting options) for the /tmp partition. See the fstab(5) manual page for more information. Run the following command to remount /tmp: # mount -o remount,nodev /tmp OR if systemd is used to mount /tmp: Edit /etc/systemd/system/local-fs.target.wants/tmp.mount to add nodev to the /tmp mount options: [Mount] Options=mode=1777,strictatime,noexec,nodev,nosuid Run the following command to restart the systemd daemon: # systemctl daemon-reload Run the following command to restart tmp.mount # systemctl restart tmp.mount."
     compliance:
       - cis: ["1.1.4"]
@@ -145,8 +155,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt -n /tmp -> r:\s/tmp\s && r:nodev'
 
   # 1.1.5 Ensure nosuid option set on /tmp partition. (Automated)
   - id: 18662
@@ -165,8 +176,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt -n /tmp -> r:\s/tmp\s && r:nosuid'
 
   # 1.1.6 Ensure /dev/shm is configured. (Automated)
   - id: 18663
@@ -185,8 +197,10 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt -n /dev/shm -> r:\s/dev/shm\s'
+      - 'f:/etc/fstab -> !r:^# && r:\s/dev/shm\s'
 
   # 1.1.7 Ensure noexec option set on /dev/shm partition. (Automated)
   - id: 18664
@@ -205,8 +219,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt -n /dev/shm  -> r:\s*/dev/shm\s && r:noexec'
 
   # 1.1.8 Ensure nodev option set on /dev/shm partition. (Automated)
   - id: 18665
@@ -225,8 +240,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt -n /dev/shm  -> r:\s*/dev/shm\s && r:nodev'
 
   # 1.1.9 Ensure nosuid option set on /dev/shm partition. (Automated)
   - id: 18666
@@ -245,8 +261,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt -n /dev/shm  -> r:\s*/dev/shm\s && r:nosuid'
 
   # 1.1.10 Ensure separate partition exists for /var. (Automated)
   - id: 18667
@@ -267,8 +284,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /var -> r:^\s*/var\s'
 
   # 1.1.11 Ensure separate partition exists for /var/tmp. (Automated)
   - id: 18668
@@ -288,8 +306,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /var/tmp -> r:^\s*/var/tmp\s'
 
   # 1.1.12 Ensure /var/tmp partition includes the noexec option. (Automated)
   - id: 18669
@@ -308,14 +327,15 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /var/tmp -> r:^\s*/var/tmp\s && r:noexec'
 
   # 1.1.13 Ensure /var/tmp partition includes the nodev option. (Automated)
   - id: 18670
     title: "Ensure /var/tmp partition includes the nodev option."
     description: "The nodev mount option specifies that the filesystem cannot contain special devices."
-    rationale: "Since the /var/tmp filesystem is not intended to support devices, set this option to ensure that users cannot attempt to create block or character special devices in /var/tmp ."
+    rationale: "Since the /var/tmp filesystem is not intended to support devices, set this option to ensure that users cannot attempt to create block or character special devices in /var/tmp."
     remediation: "For existing /var/tmp partitions, edit the /etc/fstab file and add nodev to the fourth field (mounting options) of the /var/tmp entry. See the fstab(5) manual page for more information. Run the following command to remount /var/tmp: # mount -o remount,nodev /var/tmp."
     compliance:
       - cis: ["1.1.13"]
@@ -328,14 +348,15 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /var/tmp -> r:^\s*/var/tmp\s && r:nodev'
 
   # 1.1.14 Ensure /var/tmp partition includes the nosuid option. (Automated)
   - id: 18671
     title: "Ensure /var/tmp partition includes the nosuid option."
     description: "The nosuid mount option specifies that the filesystem cannot contain setuid files."
-    rationale: "Since the /var/tmp filesystem is only intended for temporary file storage, set this option to ensure that users cannot create setuid files in /var/tmp ."
+    rationale: "Since the /var/tmp filesystem is only intended for temporary file storage, set this option to ensure that users cannot create setuid files in /var/tmp."
     remediation: "For existing /var/tmp partitions, edit the /etc/fstab file and add nosuid to the fourth field (mounting options) of the /var/tmp entry. See the fstab(5) manual page for more information. Run the following command to remount /var/tmp : # mount -o remount,nosuid /var/tmp."
     compliance:
       - cis: ["1.1.14"]
@@ -348,8 +369,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /var/tmp -> r:^\s*/var/tmp\s && r:nosuid'
 
   # 1.1.15 Ensure separate partition exists for /var/log. (Automated)
   - id: 18672
@@ -370,8 +392,9 @@ checks:
       - pci_dss_v3.2.1: ["10.7", "11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["A1.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /var/log -> r:^\s*/var/log\s'
 
   # 1.1.16 Ensure separate partition exists for /var/log/audit. (Automated)
   - id: 18673
@@ -389,8 +412,9 @@ checks:
       - iso_27001-2013: ["A.12.4.1"]
       - pci_dss_v3.2.1: ["10.7"]
       - soc_2: ["A1.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /var/log/audit -> r:^\s*/var/log/audit\s'
 
   # 1.1.17 Ensure separate partition exists for /home. (Automated)
   - id: 18674
@@ -411,8 +435,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /home -> r:^\s*/home\s'
 
   # 1.1.18 Ensure /home partition includes the nodev option. (Automated)
   - id: 18675
@@ -431,68 +456,13 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt /home -> r:^\s*/home\s && r:nodev'
 
-  # 1.1.19 Ensure removable media partitions include noexec option. (Automated)
-  - id: 18676
-    title: "Ensure removable media partitions include noexec option."
-    description: "The noexec mount option specifies that the filesystem cannot contain executable binaries."
-    rationale: "Setting this option on a file system prevents users from executing programs from the removable media. This deters users from being able to introduce potentially malicious software on the system."
-    remediation: "Edit the /etc/fstab file and add noexec to the fourth field (mounting options) of all removable media partitions. Look for entries that have mount points that contain words such as floppy or cdrom. See the fstab(5) manual page for more information."
-    compliance:
-      - cis: ["1.1.19"]
-      - cis_csc_v8: ["3.3"]
-      - cis_csc_v7: ["2.6", "13"]
-      - cmmc_v2.0: ["AC.L1-3.1.1", "AC.L1-3.1.2", "AC.L2-3.1.3", "AC.L2-3.1.5", "MP.L2-3.8.2"]
-      - hipaa: ["164.308(a)(3)(i)", "164.308(a)(3)(ii)(A)", "164.312(a)(1)"]
-      - iso_27001-2013: ["A.12.5.1", "A.12.6.2"]
-      - nist_sp_800-53: ["AC-5", "AC-6"]
-      - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
-      - pci_dss_v4.0: ["1.3.1", "7.1"]
-      - soc_2: ["CC5.2", "CC6.1"]
-    condition:
-    rules:
-
-  # 1.1.20 Ensure nodev option set on removable media partitions. (Automated)
-  - id: 18677
-    title: "Ensure nodev option set on removable media partitions."
-    description: "The nodev mount option specifies that the filesystem cannot contain special devices."
-    rationale: "Removable media containing character and block special devices could be used to circumvent security controls by allowing non-root users to access sensitive device files such as /dev/kmem or the raw disk partitions."
-    remediation: "Edit the /etc/fstab file and add nodev to the fourth field (mounting options) of all removable media partitions. Look for entries that have mount points that contain words such as floppy or cdrom. See the fstab(5) manual page for more information."
-    compliance:
-      - cis: ["1.1.20"]
-      - cis_csc_v8: ["3.3", "4.1"]
-      - cis_csc_v7: ["5.1", "13"]
-      - cmmc_v2.0: ["AC.L1-3.1.1", "AC.L1-3.1.2", "AC.L2-3.1.3", "AC.L2-3.1.5", "CM.L2-3.4.1", "CM.L2-3.4.2", "CM.L2-3.4.6", "CM.L2-3.4.7", "MP.L2-3.8.2"]
-      - hipaa: ["164.308(a)(3)(i)", "164.308(a)(3)(ii)(A)", "164.312(a)(1)"]
-      - iso_27001-2013: ["A.14.2.5", "A.8.1.3"]
-      - nist_sp_800-53: ["AC-5", "AC-6", "CM-7(1)", "CM-9", "SA-10"]
-      - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
-      - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
-      - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
-    rules:
-
-  # 1.1.21 Ensure nosuid option set on removable media partitions. (Automated)
-  - id: 18678
-    title: "Ensure nosuid option set on removable media partitions."
-    description: "The nosuid mount option specifies that the filesystem cannot contain setuid files."
-    rationale: "Setting this option on a file system prevents users from introducing privileged programs onto the system and allowing non-root users to execute them."
-    remediation: "Edit the /etc/fstab file and add nosuid to the fourth field (mounting options) of all removable media partitions. Look for entries that have mount points that contain words such as floppy or cdrom. See the fstab(5) manual page for more information."
-    compliance:
-      - cis: ["1.1.21"]
-      - cis_csc_v8: ["3.3", "4.1"]
-      - cis_csc_v7: ["5.1", "13"]
-      - cmmc_v2.0: ["AC.L1-3.1.1", "AC.L1-3.1.2", "AC.L2-3.1.3", "AC.L2-3.1.5", "CM.L2-3.4.1", "CM.L2-3.4.2", "CM.L2-3.4.6", "CM.L2-3.4.7", "MP.L2-3.8.2"]
-      - hipaa: ["164.308(a)(3)(i)", "164.308(a)(3)(ii)(A)", "164.312(a)(1)"]
-      - iso_27001-2013: ["A.14.2.5", "A.8.1.3"]
-      - nist_sp_800-53: ["AC-5", "AC-6", "CM-7(1)", "CM-9", "SA-10"]
-      - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
-      - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
-      - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
-    rules:
+  # 1.1.19 Ensure removable media partitions include noexec option. (Automated) - Not Implemented
+  # 1.1.20 Ensure nodev option set on removable media partitions. (Automated)- Not Implemented
+  # 1.1.21 Ensure nosuid option set on removable media partitions. (Automated) - Not Implemented
 
   # 1.1.22 Ensure sticky bit is set on all world-writable directories. (Automated)
   - id: 18679
@@ -511,8 +481,9 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2", "7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.3.1", "1.5.1", "2.1.1", "2.2.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1", "CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - 'not c:sh -c "df --local -P 2> /dev/null | awk ''{if (NR!=1) print $6}'' | xargs -I ''{}'' find ''{}'' -xdev -type d \\( -perm -0002 -a ! -perm -1000 \\) 2>/dev/null" -> r:^/'
 
   # 1.1.23 Disable Automounting. (Automated)
   - id: 18680
@@ -528,8 +499,9 @@ checks:
       - cmmc_v2.0: ["MP.L2-3.8.7"]
       - hipaa: ["164.310(d)(1)"]
       - iso_27001-2013: ["A.12.2.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:systemctl show autofs.service -> r:unitfilestate\s*=\s*enabled'
 
   # 1.1.24 Disable USB Storage. (Automated)
   - id: 18681
@@ -547,8 +519,10 @@ checks:
       - pci_dss_v3.2.1: ["11.5", "2.2"]
       - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
       - soc_2: ["CC7.1", "CC8.1"]
-    condition:
+    condition: all
     rules:
+      - "c:modprobe -n -v usb-storage -> r:install /bin/true"
+      - "not c:lsmod -> r:usb-storage"
 
   # 1.2.1 Ensure GPG keys are configured. (Manual)
   - id: 18682
@@ -564,7 +538,7 @@ checks:
       - nist_sp_800-53: ["SI-2(2)"]
       - pci_dss_v3.2.1: ["6.2"]
       - soc_2: ["CC7.1"]
-    condition:
+    condition: all
     rules:
 
   # 1.2.2 Ensure package manager repositories are configured. (Manual)
