--- a/ruleset/sca/rhel/8/cis_rhel8_linux.yml
+++ b/ruleset/sca/rhel/8/cis_rhel8_linux.yml
@@ -50,8 +50,9 @@ checks:
       - soc_2: ["CC6.3", "CC6.6"]
     condition: all
     rules:
-      - "c:modprobe -n -v cramfs -> r:install /bin/true|Module cramfs not found"
+      - "c:modprobe -n -v cramfs -> r:install /bin/false|Module cramfs not found"
       - "not c:lsmod -> r:cramfs"
+      - 'd:/etc/modprobe.d -> r:\.*.conf -> r:blacklist\t*\s*cramfs'
 
   # 1.1.1.2 Ensure mounting of squashfs filesystems is disabled. (Automated)
   - id: 5001
@@ -71,8 +72,9 @@ checks:
       - soc_2: ["CC6.3", "CC6.6"]
     condition: all
     rules:
-      - "c:modprobe -n -v squashfs -> r:install /bin/true|Module squashfs not found"
+      - "c:modprobe -n -v squashfs -> r:install /bin/false|Module squashfs not found"
       - "not c:lsmod -> r:squashfs"
+      - 'd:/etc/modprobe.d -> r:\.*.conf -> r:blacklist\t*\s*squashfs'
 
   # 1.1.1.3 Ensure mounting of udf filesystems is disabled. (Automated)
   - id: 5002
@@ -92,8 +94,9 @@ checks:
       - soc_2: ["CC6.3", "CC6.6"]
     condition: all
     rules:
-      - "c:modprobe -n -v udf -> r:install /bin/true|Module udf not found"
+      - "c:modprobe -n -v udf -> r:install /bin/false|Module udf not found"
       - "not c:lsmod -> r:udf"
+      - 'd:/etc/modprobe.d -> r:\.*.conf -> r:blacklist\t*\s*udf'
 
   # 1.1.2.1 Ensure /tmp is a separate partition. (Automated)
   - id: 5003
@@ -134,9 +137,9 @@ checks:
       - pci_dss_v3.2.1: ["1.1.6", "1.2.1", "2.2.2", "2.2.5"]
       - pci_dss_v4.0: ["1.2.5", "2.2.4", "6.4.1"]
       - soc_2: ["CC6.3", "CC6.6"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/tmp\s && !r:nodev'
+      - "c:findmnt --kernel /tmp -> r:nodev"
 
   # 1.1.2.3 Ensure noexec option set on /tmp partition. (Automated)
   - id: 5005
@@ -155,9 +158,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/tmp\s && !r:noexec'
+      - "c:findmnt --kernel /tmp -> r:noexec"
 
   # 1.1.2.4 Ensure nosuid option set on /tmp partition. (Automated)
   - id: 5006
@@ -176,9 +179,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/tmp\s && !r:nosuid'
+      - "c:findmnt --kernel /tmp -> r:nosuid"
 
   # 1.1.3.1 Ensure separate partition exists for /var. (Automated)
   - id: 5007
@@ -202,7 +205,7 @@ checks:
       - soc_2: ["CC5.2", "CC6.1"]
     condition: all
     rules:
-      - 'c:mount -> r:\s/var\s'
+      - 'c:findmnt --kernel /var -> r:^/var\s'
 
   # 1.1.3.2 Ensure nodev option set on /var partition. (Automated)
   - id: 5008
@@ -221,9 +224,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/tmp\s && !r:nodev'
+      - "c:findmnt --kernel /var -> r:nodev"
 
   # 1.1.3.3 Ensure noexec option set on /var partition. (Automated)
   - id: 5009
@@ -242,9 +245,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var\s && !r:noexec'
+      - "c:findmnt --kernel /var -> r:noexec"
 
   # 1.1.3.4 Ensure nosuid option set on /var partition. (Automated)
   - id: 5010
@@ -263,9 +266,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/tmp\s && !r:nosuid'
+      - "c:findmnt --kernel /var -> r:nosuid"
 
   # 1.1.4.1 Ensure separate partition exists for /var/tmp. (Automated)
   - id: 5011
@@ -289,7 +292,7 @@ checks:
       - soc_2: ["CC5.2", "CC6.1"]
     condition: all
     rules:
-      - 'c:mount -> r:\s/var/tmp\s'
+      - 'c:findmnt --kernel /var/tmp -> r:^/var/tmp\s'
 
   # 1.1.4.2 Ensure noexec option set on /var/tmp partition. (Automated)
   - id: 5012
@@ -308,9 +311,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/tmp\s && !r:noexec'
+      - "c:findmnt --kernel /var/tmp -> r:noexec"
 
   # 1.1.4.3 Ensure nosuid option set on /var/tmp partition. (Automated)
   - id: 5013
@@ -329,9 +332,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/tmp\s && !r:nosuid'
+      - "c:findmnt --kernel /var/tmp -> r:nosuid"
 
   # 1.1.4.4 Ensure nodev option set on /var/tmp partition. (Automated)
   - id: 5014
@@ -350,9 +353,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/tmp\s && !r:nodev'
+      - "c:findmnt --kernel /var/tmp -> r:nodev"
 
   # 1.1.5.1 Ensure separate partition exists for /var/log. (Automated)
   - id: 5015
@@ -372,7 +375,7 @@ checks:
       - soc_2: ["A1.1"]
     condition: all
     rules:
-      - 'c:mount -> r:\s/var/log\s'
+      - 'c:findmnt --kernel /var/log -> r:^/var/log\s'
 
   # 1.1.5.2 Ensure nodev option set on /var/log partition. (Automated)
   - id: 5016
@@ -391,9 +394,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/log\s && !r:nodev'
+      - "c:findmnt --kernel /var/log -> r:nodev"
 
   # 1.1.5.3 Ensure noexec option set on /var/log partition. (Automated)
   - id: 5017
@@ -412,9 +415,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/log\s && !r:noexec'
+      - "c:findmnt --kernel /var/log -> r:noexec"
 
   # 1.1.5.4 Ensure nosuid option set on /var/log partition. (Automated)
   - id: 5018
@@ -433,9 +436,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/log\s && !r:nosuid'
+      - "c:findmnt --kernel /var/log -> r:nosuid"
 
   # 1.1.6.1 Ensure separate partition exists for /var/log/audit. (Automated)
   - id: 5019
@@ -455,7 +458,7 @@ checks:
       - soc_2: ["A1.1"]
     condition: all
     rules:
-      - 'c:mount -> r:\s/var/log/audit\s'
+      - 'c:findmnt --kernel /var/log/audit -> r:^/var/log/audit\s'
 
   # 1.1.6.2 Ensure noexec option set on /var/log/audit partition. (Automated)
   - id: 5020
@@ -474,9 +477,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/log/audit\s && !r:noexec'
+      - "c:findmnt --kernel /var/log/audit -> r:noexec"
 
   # 1.1.6.3 Ensure nodev option set on /var/log/audit partition. (Automated)
   - id: 5021
@@ -495,9 +498,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/log/audit\s && !r:nodev'
+      - "c:findmnt --kernel /var/log/audit -> r:nodev"
 
   # 1.1.6.4 Ensure nosuid option set on /var/log/audit partition. (Automated)
   - id: 5022
@@ -516,9 +519,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/var/log/audit\s && !r:nosuid'
+      - "c:findmnt --kernel /var/log/audit -> r:nosuid"
 
   # 1.1.7.1 Ensure separate partition exists for /home. (Automated)
   - id: 5023
@@ -542,7 +545,7 @@ checks:
       - soc_2: ["CC5.2", "CC6.1"]
     condition: all
     rules:
-      - 'c:mount -> r:\s/home\s'
+      - 'c:findmnt --kernel /home -> r:^/home\s'
 
   # 1.1.7.2 Ensure nodev option set on /home partition. (Automated)
   - id: 5024
@@ -561,9 +564,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/home\s && !r:nodev'
+      - "c:findmnt --kernel /home -> r:nodev"
 
   # 1.1.7.3 Ensure nosuid option set on /home partition. (Automated)
   - id: 5025
@@ -582,9 +585,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/home\s && !r:nosuid'
+      - "c:findmnt --kernel /home -> r:nosuid"
 
   # 1.1.7.4 Ensure usrquota option set on /home partition. (Automated)
   - id: 5026
@@ -603,10 +606,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/home\s && !r:usrquota'
-      - 'c:quotaon -p /home -> !r:\s/home\s && !r:quota'
+      - "c:findmnt --kernel /home -> r:usrquota"
 
   # 1.1.7.5 Ensure grpquota option set on /home partition. (Automated)
   - id: 5027
@@ -625,9 +627,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/home\s && !r:grpquota'
+      - "c:findmnt --kernel /home -> r:grpquota"
 
   # 1.1.8.1 Ensure nodev option set on /dev/shm partition. (Automated)
   - id: 5028
@@ -646,9 +648,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/dev/shm\s && !r:nodev'
+      - "c:findmnt --kernel /dev/shm -> r:nodev"
 
   # 1.1.8.2 Ensure noexec option set on /dev/shm partition. (Automated)
   - id: 5029
@@ -667,9 +669,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/dev/shm\s && !r:noexec'
+      - "c:findmnt --kernel /dev/shm -> r:noexec"
 
   # 1.1.8.3 Ensure nosuid option set on /dev/shm partition. (Automated)
   - id: 5030
@@ -688,9 +690,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: none
+    condition: all
     rules:
-      - 'c:mount -> r:\s/dev/shm\s && !r:nosuid'
+      - "c:findmnt --kernel /dev/shm -> r:nosuid"
 
   # 1.1.9 Disable Automounting. (Automated)
   - id: 5031
@@ -754,7 +756,7 @@ checks:
     condition: all
     rules:
       - "f:/etc/dnf/dnf.conf -> r:gpgcheck=1"
-      - "not c:grep -Rh ^gpgcheck /etc/yum.repos.d/ -> r:gpgcheck=0"
+      - 'd:/etc/yum.repos.d/ -> r:\. -> r:gpgcheck=1'
 
   # 1.2.4 Ensure package manager repositories are configured. (Manual) - Not Implemented
 
@@ -873,10 +875,11 @@ checks:
       - iso_27001-2013: ["A.9.4.3"]
       - pci_dss_v4.0: ["2.2.2", "8.3.5", "8.3.6", "8.6.3"]
       - soc_2: ["CC6.1"]
-    condition: all
+    condition: any
     rules:
-      - "f:/usr/lib/systemd/system/rescue.service -> r:ExecStart=-/usr/lib/systemd/systemd-sulogin-shell rescue"
-      - "f:/usr/lib/systemd/system/emergency.service -> r:ExecStart=-/usr/lib/systemd/systemd-sulogin-shell emergency"
+      - 'f:/systemd-sulogin-shell -> r:ExecStart=-/usr/lib/systemd/systemd-sulogin-shell\s*rescue'
+      - 'f:/usr/lib/systemd/system/rescue.service -> r:ExecStart=-/usr/lib/systemd/systemd-sulogin-shell\s*rescue'
+      - 'f:/etc/systemd/system/rescue.service.d -> r:ExecStart=-/usr/lib/systemd/systemd-sulogin-shell\s*rescue'
 
   ###############################################
   # 1.5 Additional Process Hardening
@@ -1319,9 +1322,26 @@ checks:
       - soc_2: ["CC6.3", "CC6.6"]
     condition: none
     rules:
-      - "f:/etc/gdm/custom.conf -> r:Enable=true"
+      - 'f:/etc/gdm/custom.conf -> r:^\s*Enable\s*=\s*true'
 
   # 1.8.5 Ensure automatic mounting of removable media is disabled. (Automated) Not Implemented
+  - id: 5059
+    title: "Ensure automatic mounting of removable media is disabled."
+    description: "By default GNOME automatically mounts removable media when inserted as a convenience to the user."
+    rationale: "With automounting enabled anyone with physical access could attach a USB drive or disc and have its contents available in system even if they lacked permissions to mount it themselves."
+    remediation: "Ensure that automatic mounting of media is disabled for all GNOME users."
+    compliance:
+      - cis: ["1.8.4"]
+      - cis_csc_v8: ["4.8"]
+      - cis_csc_v7: ["9.2"]
+      - cmmc_v2.0: ["CM.L2-3.4.7", "CM.L2-3.4.8", "SC.L2-3.13.6"]
+      - iso_27001-2013: ["A.13.1.3"]
+      - pci_dss_v3.2.1: ["1.1.6", "1.2.1", "2.2.2", "2.2.5"]
+      - pci_dss_v4.0: ["1.2.5", "2.2.4", "6.4.1"]
+      - soc_2: ["CC6.3", "CC6.6"]
+    condition: all
+    rules:
+      - "c:gsettings get org.gnome.desktop.media-handling automount -> r:false"
 
   # 1.9 Ensure updates, patches, and additional security software are installed. (Manual)
   - id: 5060
@@ -1406,8 +1426,8 @@ checks:
       - soc_2: ["CC4.1", "CC5.2"]
     condition: all
     rules:
-      - 'f:/etc/chrony.conf -> r:^server\s*\t*\.+|^pool\s*\t*\.+'
-      - 'not c:ps -ef -> r:\.+/chronyd\s*\t*$ && !r:^\s*\t*chrony\s*\t*'
+      - "f:/etc/chrony.conf"
+      - 'f:/etc/chrony.conf -> r:^\s*\t*server|^\s*\t*pool'
       - 'f:/etc/sysconfig/chronyd -> r:^\s*\t*OPTIONS\.*-u chrony'
 
   # 2.2.1 Ensure xinetd is not installed. (Automated)
