--- a/src/engine/test/source/router/CMakeLists.txt
+++ b/src/engine/test/source/router/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories(router_test
   PRIVATE
   ${TEST_SOURCE_DIR}/common
 )
-target_link_libraries(router_test gtest_main base router builders rxbk store::mocks test_mocks defs::mocks schemf::mocks)
+target_link_libraries(router_test gtest_main base router builders rxbk store::mocks test_mocks defs::mocks schemf::mocks builder::mocks)
 gtest_discover_tests(router_test)
 
 # Runtime environment test
